updated about and favicon

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "James Sinclair"
   avatar           : "profile.jpg"
-  bio              : "Aerospace engineer / Computer scientist"
+  bio              : "Software engineer / Aerospace engineer"
   location         : "Melbourne, VIC, Australia"
   employer         : "PassBox"
   pubmed           : 
